syntax = "proto3";

package base;

message BasePayload {
    bytes meta = 1;
}
